# IODR_python

./: .gitignore  IODR_data.py  IODR_growth_rate.py  IODR_python.py  LICENSE  README.md  pyproject.toml
iodr/: __init__.py  growth_rate.py
